# ROBOT_CONTROLLERS

./: README.md
flight_controller/: README.md
self_balancing/: CMakeLists.txt  sdkconfig
self_balancing/components/ws_server/: CMakeLists.txt  sdkconfig  sdkconfig.old  ws_server.c
self_balancing/components/ws_server/include/: ws_server.h
self_balancing/main/: CMakeLists.txt  main.c
self_balancing/main/inc/: mpu6050_iface.h  pwm_iface.h
self_balancing/main/src/: mpu6050_iface.c  pwm_iface.c
